bin_PROGRAMS = TAVG.exe TAVG.r4.exe
bin_SCRIPTS = timavg.csh

TAVG_exe_SOURCES = time_average.f90
TAVG_exe_FCFLAGS = $(NETCDF_FCFLAGS) $(BASE_FCFLAGS) $(R8_FCFLAGS) $(AM_FCFLAGS)
TAVG_exe_LDADD = $(NETCDF_FCLDFLAGS) $(NETCDF_FCLIBS)

TAVG_r4_exe_SOURCES = time_average.f90
TAVG_r4_exe_FCFLAGS = $(NETCDF_FCFLAGS) $(BASE_FCFLAGS) $(R4_FCFLAGS) $(AM_FCFLAGS)
TAVG_r4_exe_LDADD = $(NETCDF_FCLDFLAGS) $(NETCDF_FCLIBS)

clean-local:
	$(RM) *.mod
